# ai_middleware

./: .env  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  settings.py  test.db
src/controllers/: agent_controller.py  log_controller.py  text_controller.py
src/db/: graph_store.py
src/db/graph/: graph_store.py
src/db/sql/: __init__.py  engine.py
src/db/vector/: __init__.py  graph_store.py
src/endpoints/controllers/: SummaryController.py
src/endpoints/models/: SummaryModel.py
src/endpoints/services/: SummaryService.py
src/gateway/routes/: __init__.py  agent_routes.py  log_routes.py  text_routes.py
src/main/controllers/: __init__.py  agent_controller.py  log_controller.py  text_controller.py
src/orchestrator/: __init__.py  orchestrator.py
src/orchestrator/adapters/: __init__.py  huggy_face_adapter.py  mistral_adapter.py
src/orchestrator/binders/: mistral_binder.py
src/orchestrator/providers/: __init__.py  huggy_face_provider.py  mistral_provider.py
src/routes/: __init__.py  agent_routes.py  log_routes.py  text_routes.py
src/services/: text_service.py
src/services/agent_services/: ask_agent_intentic_service.py  ask_agent_service.py
src/services/log_services/: get_logs.py  post_log.py
src/services/text_service/: __init__.py  get_rag_text_query.py  post_rag_text_add_document.py
src/services/text_services/: get_rag_text_query.py  get_summarized_text.py  get_text_embedding.py  post_rag_text_add_document.py
src/types/classes/: __init__.py  (+3 more)
src/utils/: __init__.py  logger_debug.py
(+26 files in other folders)
